Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19380

Clock does not correctly respond to big/small icon change

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • Shell
    • None

    Description

      reactos-bootcd-0.4.15-dev-7194-g8be9121-x86-gcc-lin-dbg

      • Switch to "large icons"
      • Day, part of yeat is not displayed, only /mm/yy

      • Switch back to "small icon"
      • Display is too large (looks like it's the expected width for the previous case ?)

      Automatically recovered after a while

      Guilty code in : base/shell/explorer/trayclock.cpp

       

      Attachments

        Issue Links

          Activity

            People

              anonanon cbialorucki
              KRosUser KRosUser
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: